--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,8 @@
 
 		<!--Google Fonts-->
 
-		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Kreon:wght@400;600&family=Libre+Franklin:wght@400;600&family=Molengo&family=Ropa+Sans&display=swap"
-			rel="stylesheet"
-		/>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Ropa+Sans&display=swap" rel="stylesheet">
 
 		<!--Title-->
 
@@ -40,6 +37,7 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
+      <div id="menu-root"></div>
 		<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
